# soulbase

./: .gitignore  Cargo.toml
crates/sb-auth/: Cargo.toml  README.md
crates/sb-auth/src/: errors.rs  events.rs  facade.rs  lib.rs  model.rs  observe.rs  prelude.rs
crates/sb-auth/src/attr/: mod.rs
crates/sb-auth/src/authn/: mod.rs
crates/sb-auth/src/cache/: mod.rs
crates/sb-auth/src/consent/: mod.rs
crates/sb-auth/src/pdp/: mod.rs
crates/sb-auth/src/quota/: mod.rs
crates/sb-auth/tests/: basic.rs
crates/sb-config/: Cargo.toml  README.md
crates/sb-config/src/: access.rs  errors.rs  events.rs  loader.rs  model.rs  prelude.rs  schema.rs  snapshot.rs  switch.rs  validate.rs  watch.rs
crates/sb-config/src/secrets/: mod.rs
crates/sb-config/src/source/: cli.rs  env.rs  file.rs  mod.rs
crates/sb-config/tests/: basic.rs
crates/sb-errors/: Cargo.toml  README.md
crates/sb-errors/src/: code.rs  kind.rs  labels.rs  mapping_grpc.rs  mapping_http.rs  model.rs  prelude.rs  render.rs  retry.rs  severity.rs  wrap.rs
crates/sb-errors/tests/: basic.rs
crates/sb-gateway/: .env.example  Cargo.toml  README.md
crates/sb-gateway/src/: api.rs  config.rs  intercept.rs  main.rs  service.rs
crates/sb-interceptors/: Cargo.toml  README.md
crates/sb-interceptors/src/: context.rs  errors.rs  idempotency.rs  lib.rs  observe.rs  prelude.rs  resilience.rs
crates/sb-interceptors/src/adapters/: grpc.rs  http.rs  mod.rs  mq.rs
crates/sb-interceptors/src/policy/: dsl.rs  mod.rs  model.rs
crates/sb-interceptors/src/schema/: json.rs  mod.rs
crates/sb-interceptors/src/stages/: authn_map.rs  authz_quota.rs  context_init.rs  idempotency.rs  mod.rs  obligations.rs  response_stamp.rs  route_policy.rs  schema_guard.rs
crates/sb-interceptors/tests/: basic.rs
crates/sb-llm/: Cargo.toml  README.md
crates/sb-llm/src/: chat.rs  cost.rs  embed.rs  errors.rs  jsonsafe.rs  model.rs  observe.rs  prelude.rs  provider.rs  rerank.rs
crates/sb-llm/tests/: basic.rs
crates/sb-sandbox/: Cargo.toml
crates/sb-sandbox/src/: budget.rs  config.rs  errors.rs  evidence.rs  guard.rs  lib.rs  manager.rs  model.rs  observe.rs  prelude.rs  profile.rs
crates/sb-sandbox/src/exec/: browser.rs  fs.rs  mod.rs  net.rs  proc_exec.rs  tmp.rs
crates/sb-sandbox/tests/: basic.rs
crates/sb-storage/: Cargo.toml
crates/sb-storage/src/: errors.rs  lib.rs  model.rs  observe.rs  prelude.rs
crates/sb-storage/src/mock/: datastore.rs  graph.rs  migrate.rs  mod.rs  repo.rs  search.rs  vector.rs
crates/sb-storage/src/spi/: graph.rs  health.rs  migrate.rs  mod.rs  query.rs  repo.rs  search.rs  vector.rs
crates/sb-storage/src/surreal/: binder.rs  config.rs  datastore.rs  errors.rs  graph.rs  mapper.rs  migrate.rs  mod.rs  observe.rs  repo.rs  search.rs  vector.rs
crates/sb-storage/tests/: basic.rs  surreal_e2e.rs
crates/sb-tools/: Cargo.toml  README.md
crates/sb-tools/src/: errors.rs  events.rs  invoker.rs  lib.rs  manifest.rs  mapping.rs  observe.rs  preflight.rs  prelude.rs  registry.rs
crates/sb-tools/tests/: basic.rs
crates/sb-tx/: Cargo.toml
crates/sb-tx/src/: a2a.rs  backoff.rs  config.rs  errors.rs  idempo.rs  lib.rs  model.rs  observe.rs  outbox.rs  prelude.rs  qos.rs  replay.rs  saga.rs  worker.rs
crates/sb-tx/src/memory/: dead_store.rs  idempo_store.rs  mod.rs  outbox_store.rs  saga_store.rs
crates/sb-tx/src/surreal/: mapper.rs  mod.rs  schema.rs  store.rs
crates/sb-tx/src/transport/: http.rs  kafka.rs  mod.rs  redis.rs
crates/sb-tx/tests/: basic.rs  surreal.rs
crates/sb-types/: Cargo.toml  README.md
crates/sb-types/src/: envelope.rs  id.rs  lib.rs  prelude.rs  scope.rs  subject.rs  tenant.rs  time.rs  trace.rs  traits.rs  validate.rs
crates/sb-types/tests/: basic.rs
docs/01-Soulbase1.0架构文档/: 00-Soul宇宙架构总览.md  01-SoulBase总体19模块精检文档.md  02-SoulBase开发总纲.md
docs/01-Soulbase1.0架构文档/01-soulbase-types/: 01-soulbase-types功能逻辑规约.md  02-soulbase-types技术设计文档.md  03-soulbase-types代码骨架.md  04-soulbase-types开发总结.md  99-幂等主锚（Issue02）.md
docs/01-Soulbase1.0架构文档/02-soulbase-errors/: 01-soulbase-errors功能逻辑规约.md  02-soulbase-errors技术设计文档.md  03-soulbase-errors代码骨架.md  04-soulbase-errors开发总结.md  98-工具（grep未知错误码）.md  99-错误码附录（Issue01）.md
docs/01-Soulbase1.0架构文档/03-soulbase-config/: 01-soulbase-config功能逻辑规约.md  02-soulbase-config技术设计文档.md  03-soulbase-config代码骨架.md  04-soulbase-config开发总结.md  99-Config快照贯穿（Issue04）.md
docs/01-Soulbase1.0架构文档/04-soulbase-auth/: 01-soulbase-auth功能逻辑规约.md  02-soulbase-auth技术设计文档.md  03-soulbase-auth代码骨架.md  04-soulbase-auth开发总结.md  99-Auth×QoS（Issue03）.md
docs/01-Soulbase1.0架构文档/05-soulbase-interceptors/: 01-soulbase-interceptors功能逻辑规约.md  02-soulbase-interceptors技术设计文档.md  03-soulbase-interceptors代码骨架.md  05-soulbase-interceptors开发总结.md  98-RIS示例（to_public统一）.md  99-Auth×QoS（Issue03）.md  99-Net对接（Issue06）.md
docs/01-Soulbase1.0架构文档/06-soulbase-sandbox/: 01-soulbase-sandbox功能逻辑规约.md  02-soulbase-sandbox技术设计文档.md  03-soulbase-sandbox代码骨架.md  06-soulbase-sandbox开发总结.md  99-Config快照贯穿（Issue04）.md  99-Sandbox基线（Issue05）.md
docs/01-Soulbase1.0架构文档/07-soulbase-llm/: 01-soulbase-llm功能逻辑规约.md  02-soulbase-llm技术设计文档.md  03-soulbase-llm代码骨架.md  06-soulbase-llm开发总结.md
docs/01-Soulbase1.0架构文档/08-soulbase-tools/: 01-soulbase-tools功能逻辑规约.md  02-soulbase-tools技术设计文档.md  03-soulbase-tools代码骨架.md  04-soulbase-tools开发总结.md  99-Config快照贯穿（Issue04）.md  99-Tools×Sandbox（Issue05）.md
docs/01-Soulbase1.0架构文档/09-soulbase-storage/: 01-soulbase-storage功能逻辑规约.md  02-soulbase-storage技术设计文档.md  03-soulbase-storage代码骨架.md  04-soulbase-storage开发总结.md  99-Cache失效接线（Issue07）.md  99-Surreal适配（Issue10）.md
docs/01-Soulbase1.0架构文档/10-soulbase-tx/: 01-soulbase-tx功能逻辑规约.md  02-soulbase-tx技术设计文档.md  03-soulbase-tx代码骨架.md  05-soulbase-tx开发总结.md  99-A2A对接（Issue12）.md  99-Cache失效接线（Issue07）.md  99-Surreal对接（Issue10）.md  99-幂等主锚（Issue02）.md
docs/01-Soulbase1.0架构文档/11-soulbase-observe/: 01-soulbase-observe功能逻辑规约.md  03-soulbase-observe代码骨架.md  99-A2A（Issue12）.md  99-Config快照贯穿（Issue04）.md  99-Observe统一（Issue09）.md
docs/01-Soulbase1.0架构文档/12-soulbase-benchmark/: 98-CI示例（PR短基线）.md  (+4 more)
(+43 files in other folders)
