[workspace]
members = [
  "crates/sb-types",
  "crates/sb-errors",
  "crates/sb-config",
  "crates/sb-auth",
  "crates/sb-interceptors",
  "crates/sb-sandbox",
  "crates/sb-llm",
  "crates/sb-tools",
  "crates/sb-storage",
  "crates/sb-tx",
  "crates/sb-gateway"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
