[package]
name = "sb-errors"
version = "0.1.0"
edition = "2021"
description = "Unified error domain & stable error codes for the Soul platform."
license = "Apache-2.0"

[features]
http = ["dep:http"]
grpc = ["dep:tonic"]
wrap-reqwest = ["dep:reqwest"]
wrap-sqlx = ["dep:sqlx"]
wrap-llm = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
once_cell = "1"

http = { version = "1", optional = true }
tonic = { version = "0.12", optional = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["rustls-tls"] }
sqlx = { version = "0.7", optional = true, default-features = false, features = ["runtime-tokio", "macros"] }

sb-types = { path = "../sb-types", version = "0.1.0" }

[dev-dependencies]
serde_json = "1"
