[package]
name = "sb-gateway"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

sb-errors = { path = "../sb-errors" }
sb-interceptors = { path = "../sb-interceptors", features = ["with-axum"] }
async-trait = "0.1"
