[package]
name = "sb-interceptors"
version = "0.1.0"
edition = "2021"
description = "Uniform interceptor chain and middleware primitives for the Soul platform."
license = "Apache-2.0"

[features]
default = []
with-axum = ["dep:axum", "dep:tower", "dep:http"]
with-tonic = ["dep:tonic", "sb-errors/grpc"]
schema-json = ["dep:jsonschema"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
http = { version = "1", optional = true }
axum = { version = "0.7", optional = true, default-features = false, features = ["json"] }
tower = { version = "0.4", optional = true }
tonic = { version = "0.12", optional = true, default-features = false, features = ["transport"] }
jsonschema = { version = "0.17", optional = true }

sb-types = { path = "../sb-types", version = "0.1.0" }
sb-config = { path = "../sb-config", version = "0.1.0" }
sb-errors = { path = "../sb-errors", version = "0.1.0", features = ["http"] }
sb-auth = { path = "../sb-auth", version = "0.1.0" }

[dev-dependencies]
serde_json = "1"
