[package]
name = "sb-llm"
version = "0.1.0"
edition = "2021"
description = "Provider-agnostic LLM SPI (Chat/Stream/Embeddings/Rerank) for the Soul platform"
license = "Apache-2.0"

[features]
default = []
schema-json = ["schemars"]
provider-local = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
futures-core = "0.3"
futures-util = "0.3"
schemars = { version = "0.8", optional = true }

sb-types = { path = "../sb-types", version = "0.1.0" }
sb-errors = { path = "../sb-errors", version = "0.1.0" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
