[package]
name = "sb-sandbox"
version = "0.1.0"
edition = "2021"
description = "Controlled execution sandbox with capability enforcement and evidence collection."
license = "Apache-2.0"

[features]
default = []
exec-fs = []
exec-net = []
exec-browser = []
exec-proc = []
exec-tmp = []
net-reqwest = []
browser-chromium = []
wasi = []
qos = []
observe = []
schema-json = []

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
url = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

sb-types = { path = "../sb-types", version = "0.1.0" }
sb-errors = { path = "../sb-errors", version = "0.1.0", features = ["http"] }
sb-config = { path = "../sb-config", version = "0.1.0" }
sb-auth = { path = "../sb-auth", version = "0.1.0" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
serde_json = "1"
