[package]
name = "sb-storage"
version = "0.1.0"
edition = "2021"
description = "Storage SPI and adapters for the Soul platform"
license = "Apache-2.0"

[features]
default = ["mock"]
mock = []
surreal = ["dep:surrealdb", "dep:tokio"]
vector = []
fulltext = []
migrate = []
pool = []
qos = []
observe = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
parking_lot = "0.12"
ahash = "0.8"
chrono = { version = "0.4", features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync"], optional = true }

sb-types = { path = "../sb-types", version = "0.1.0" }
sb-errors = { path = "../sb-errors", version = "0.1.0" }
surrealdb = { version = "2.3.1", optional = true, default-features = false, features = ["protocol-ws", "protocol-http", "kv-mem"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
