[package]
name = "sb-tools"
version = "0.1.0"
edition = "2021"
description = "Tool SDK / Manifest / Registry / Invocation Protocol for the Soul platform"
license = "Apache-2.0"

[features]
default = ["schema-json"]
schema-json = ["schemars", "jsonschema"]
tenant-scoped-registry = []
idempotency-inmemory = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
parking_lot = "0.12"
ahash = "0.8"
chrono = { version = "0.4", features = ["clock"] }
semver = { version = "1", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

# optional schema validation stack
schemars = { version = "0.8", optional = true }
jsonschema = { version = "0.17", optional = true, features = ["draft202012"] }

# internal workspace crates
sb-types = { path = "../sb-types", version = "0.1.0" }
sb-errors = { path = "../sb-errors", version = "0.1.0" }
sb-sandbox = { path = "../sb-sandbox", version = "0.1.0" }
sb-auth = { path = "../sb-auth", version = "0.1.0" }
sb-config = { path = "../sb-config", version = "0.1.0" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3"
