[package]
name = "sb-tx"
version = "0.1.0"
edition = "2021"
description = "Reliable transactions: Outbox · Saga · Idempotency for the Soul platform"
license = "Apache-2.0"

[features]
default = ["memory", "transport-http"]
memory = []
surreal = ["dep:sb-storage", "sb-storage/surreal"]
transport-http = ["dep:reqwest"]
transport-kafka = ["dep:rdkafka"]
transport-redis = ["dep:redis"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["clock"] }
rand = "0.8"
futures-util = "0.3"
sb-types = { path = "../sb-types", version = "0.1.0" }
sb-errors = { path = "../sb-errors", version = "0.1.0" }
sb-config = { path = "../sb-config", version = "0.1.0" }
sb-storage = { path = "../sb-storage", version = "0.1.0", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
rdkafka = { version = "0.36", optional = true, features = ["tokio"] }
tokio = { version = "1", features = ["rt", "time", "sync"] }
redis = { version = "0.24", optional = true, features = ["aio", "tokio-comp"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
axum = { version = "0.7", features = ["macros", "json"] }
