[package]
name = "sb-types"
version = "0.1.0"
edition = "2021"
description = "Data contract primitives for the Soul platform."
license = "Apache-2.0"

[features]
schema = ["schemars"]
serde_borrow = []
uuid = ["dep:uuid"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
semver = "1"
schemars = { version = "0.8", optional = true }
uuid = { version = "1", optional = true, features = ["v4"] }

[dev-dependencies]
serde_json = "1"
